--- a/.styleci.yml
+++ b/.styleci.yml
@@ -37,6 +37,7 @@ enabled:
   - no_whitespace_before_comma_in_array
   - no_whitespace_in_blank_line
   - normalize_index_brace
+  - object_operator_without_whitespace
   - phpdoc_add_missing_param_annotation
   - phpdoc_annotation_without_dot
   - phpdoc_indent
