--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,6 @@
     "require": {
         "typo3/cms-core": "^7.6 || ^8.7"
     },
-    "suggest": {
-        "friendsofphp/php-cs-fixer": "Tool to automatically fix PHP coding standards issues"
-    },
     "autoload": {
         "psr-4": {
             "IchHabRecht\\Filefill\\": "Classes/"
@@ -39,8 +36,10 @@
     },
     "extra": {
         "typo3/cms": {
+            "extension-key": "filefill",
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": ".Build/Web"
+            "app-dir": ".Build",
+            "web-dir": ".Build/public"
         }
     }
 }
