--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -53,6 +53,7 @@ return PhpCsFixer\Config::create()
         'no_multiline_whitespace_before_semicolons' => true,
         'no_short_bool_cast' => true,
         'no_singleline_whitespace_before_semicolons' => true,
+        'no_superfluous_phpdoc_tags' => true,
         'no_trailing_comma_in_list_call' => true,
         'no_trailing_comma_in_singleline_array' => true,
         'no_unneeded_control_parentheses' => [
@@ -69,6 +70,7 @@ return PhpCsFixer\Config::create()
         'no_useless_return' => true,
         'no_whitespace_before_comma_in_array' => true,
         'no_whitespace_in_blank_line' => true,
+        'non_printable_character' => true,
         'normalize_index_brace' => true,
         'object_operator_without_whitespace' => true,
         'ordered_imports' => true,
@@ -82,7 +84,9 @@ return PhpCsFixer\Config::create()
         'phpdoc_single_line_var_spacing' => true,
         'phpdoc_trim' => true,
         'phpdoc_types' => true,
+        'self_accessor' => true,
         'phpdoc_var_without_name' => true,
+        'return_type_declaration' => ['space_before' => 'none'],
         'short_scalar_cast' => true,
         'single_quote' => true,
         'standardize_not_equals' => true,
