--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ install:
     if [[ "$TYPO3" = *"dev"* ]]; then
       composer config minimum-stability dev;
       composer config prefer-stable true;
-      composer require typo3/cms-core="@dev" --no-update;
+      composer require typo3/cms-core:"@dev" --no-update;
     fi
-  - composer require nimut/typo3-complete:$TYPO3
+  - composer require nimut/typo3-complete:"$TYPO3"
   - mkdir -p .Build/public/typo3conf/ext/
   - if [ ! -L .Build/public/typo3conf/ext/filefill ]; then ln -snvf ../../../../. .Build/public/typo3conf/ext/filefill; fi
   - export TYPO3_PATH_ROOT=$PWD/.Build/public
@@ -92,24 +92,20 @@ jobs:
       install: skip
       before_script: skip
       script:
-      - >
-        echo;
-        echo "Preparing upload of release ${TRAVIS_TAG} to TER";
-        echo;
-        echo;
-        composer require --dev nimut/typo3-complete:$TYPO3;
-        composer require --update-no-dev helhum/ter-client:dev-master;
+        - >
+          echo;
+          echo "Preparing upload of release ${TRAVIS_TAG} to TER";
+          echo;
+          echo;
+          composer global require helhum/ter-client;
 
-        # Cleanup before we upload
-        git reset --hard HEAD && git clean -fx;
-
-        # Upload
-        TAG_MESSAGE=`git tag -n10 -l $TRAVIS_TAG | sed 's/^[0-9.]*[ ]*//g'`;
-        echo;
-        echo "Uploading release ${TRAVIS_TAG} to TER";
-        echo;
-        echo;
-        .Build/bin/ter-client upload filefill . -u "$TYPO3_ORG_USERNAME" -p "$TYPO3_ORG_PASSWORD" -m "$TAG_MESSAGE";
+        - >
+          TAG_MESSAGE=`git tag -n10 -l $TRAVIS_TAG | sed 's/^[0-9.]*[ ]*//g'`;
+          echo;
+          echo "Uploading release ${TRAVIS_TAG} to TER";
+          echo;
+          echo;
+          $HOME/.composer/vendor/bin/ter-client upload filefill . -u "$TYPO3_ORG_USERNAME" -p "$TYPO3_ORG_PASSWORD" -m "$TAG_MESSAGE";
 
     - stage: ✔ with sonarqube scanner
       if: type = push AND branch IN (master, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
@@ -133,7 +129,7 @@ jobs:
               echo;
               echo;
               git clean -Xdf;
-              composer require --dev nimut/typo3-complete:$TYPO3;
+              composer require --dev nimut/typo3-complete:"$TYPO3";
               git checkout composer.json;
               VERSION=${TYPO3//[!0-9]/};
 
