[TASK] Update supporting files to EXT:my_skeleton 0.1.4

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -53,7 +53,6 @@ return PhpCsFixer\Config::create()
         'no_multiline_whitespace_before_semicolons' => true,
         'no_short_bool_cast' => true,
         'no_singleline_whitespace_before_semicolons' => true,
-        'no_superfluous_phpdoc_tags' => true,
         'no_trailing_comma_in_list_call' => true,
         'no_trailing_comma_in_singleline_array' => true,
         'no_unneeded_control_parentheses' => [
@@ -101,4 +100,6 @@ return PhpCsFixer\Config::create()
             ->exclude('doc')
             ->exclude('Resources')
             ->notName('ext_emconf.php')
+            ->notName('ext_localconf.php')
+            ->notName('ext_tables.php')
     );
