[FEATURE] Downgrade to TYPO3 6.2

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -8,6 +8,7 @@ enabled:
   - function_typehint_space
   - hash_to_slash_comment
   - linebreak_after_opening_tag
+  - long_array_syntax
   - lowercase_cast
   - method_separation
   - native_function_casing
@@ -52,7 +53,6 @@ enabled:
   - phpdoc_var_without_name
   - return_type_declaration
   - self_accessor
-  - short_array_syntax
   - short_scalar_cast
   - single_quote
   - standardize_not_equals
