--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -17,14 +17,13 @@ return PhpCsFixer\Config::create()
     ->setRules([
         '@PSR2' => true,
         'array_syntax' => [
-            'syntax' => 'short',
+            'syntax' => 'long',
         ],
         'binary_operator_spaces' => true,
         'blank_line_before_return' => true,
         'concat_space' => [
             'spacing' => 'one',
         ],
-        'declare_strict_types' => true,
         'function_typehint_space' => true,
         'hash_to_slash_comment' => true,
         'linebreak_after_opening_tag' => true,
