--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^7.6 || ^8.7"
+        "typo3/cms-core": "^6.2"
     },
     "autoload": {
         "psr-4": {
