[TASK] Update supporting files to EXT:my_skeleton 0.2.1

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -21,6 +21,9 @@ return PhpCsFixer\Config::create()
         ],
         'binary_operator_spaces' => true,
         'blank_line_before_return' => true,
+        'cast_spaces' => [
+            'space' => 'none',
+        ],
         'concat_space' => [
             'spacing' => 'one',
         ],
