--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,13 @@ cache:
 jdk:
   - oraclejdk8
 
+services:
+  - mysql
+
 sudo: required
 
 before_install:
-  - if php -i | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
+  - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
 
 install:
   - >
