--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,17 @@
     "require": {
         "typo3/cms-core": "^8.7 || ^9.5 || ~10.3.0"
     },
+    "require-dev": {
+        "nimut/testing-framework": "5.x-dev"
+    },
     "autoload": {
         "psr-4": {
             "IchHabRecht\\Filefill\\": "Classes/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "IchHabRecht\\Filefill\\Tests\\": "Tests/"
         }
     },
     "replace": {
