--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,6 @@ jobs:
             env: TYPO3=dev-master
         -   if: type != cron
             env: TYPO3=10.4.x-dev
-        -   if: type != cron
-            env: TYPO3=9.5.x-dev
-        -   if: type != cron
-            env: TYPO3=8.7.x-dev
     include:
         - &tests
             stage: 🏃 tests
@@ -75,32 +71,11 @@ jobs:
             php: 7.4
             env: TYPO3=^10.4
         -   <<: *tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *tests
             php: 7.3
             env: TYPO3=^10.4
         -   <<: *tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^8.7
-        -   <<: *tests
             php: 7.2
             env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^8.7
-        -   <<: *tests
-            php: 7.1
-            env: TYPO3=^8.7
-        -   <<: *tests
-            php: 7.0
-            env: TYPO3=^8.7
 
         -   stage: 🚢 to ter
             if: tag IS present AND env(TYPO3_ORG_USERNAME) IS present AND env(TYPO3_ORG_PASSWORD) IS present
@@ -126,7 +101,7 @@ jobs:
             git:
                 depth: false
             php: 7.2
-            env: TYPO3="^8.7 ^9.5 ^10.4"
+            env: TYPO3="^10.4"
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
@@ -196,31 +171,19 @@ jobs:
             env: TYPO3=dev-master
         -   <<: *dev-tests
             php: 7.4
-            env: TYPO3=9.5.x-dev
+            env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.3
             env: TYPO3=dev-master
         -   <<: *dev-tests
             php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.2
             env: TYPO3=dev-master
         -   <<: *dev-tests
             php: 7.2
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
-            php: 7.1
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
-            php: 7.0
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=10.4.x-dev
 
         - &lowest-tests
             <<: *dev-tests
@@ -236,56 +199,14 @@ jobs:
             php: 7.4
             env: TYPO3=10.4.x-dev
         -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=dev-master
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=10.4.x-dev
         -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=dev-master
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
-            php: 7.1
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.1
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
-            php: 7.0
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.0
-            env: TYPO3=8.7.x-dev
