--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.5 || ^10.4"
+        "typo3/cms-core": "^10.4 || ~11.0.0"
     },
     "require-dev": {
         "nimut/testing-framework": "5.x-dev"
@@ -43,7 +43,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.x-dev"
+            "dev-master": "4.x-dev"
         },
         "typo3/cms": {
             "extension-key": "filefill",
