[TASK] Update supporting files to EXT:my_skeleton 0.4.0

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -20,26 +20,31 @@ return PhpCsFixer\Config::create()
             'syntax' => 'short',
         ],
         'binary_operator_spaces' => true,
+        'blank_line_after_opening_tag' => true,
         'blank_line_before_return' => true,
         'cast_spaces' => [
             'space' => 'none',
         ],
+        'compact_nullable_typehint' => true,
         'concat_space' => [
             'spacing' => 'one',
         ],
-        'declare_equal_normalize' => ['space' => 'single'],
+        'declare_equal_normalize' => [
+            'space' => 'none'
+        ],
         'declare_strict_types' => true,
         'function_typehint_space' => true,
         'hash_to_slash_comment' => true,
         'linebreak_after_opening_tag' => true,
         'lowercase_cast' => true,
+        'lowercase_constants' => true,
+        'lowercase_static_reference' => true,
         'method_separation' => true,
         'native_function_casing' => true,
         'new_with_braces' => true,
         'no_alias_functions' => true,
         'no_blank_lines_after_class_opening' => true,
         'no_blank_lines_after_phpdoc' => true,
-        'no_blank_lines_before_namespace' => true,
         'no_empty_comment' => true,
         'no_empty_phpdoc' => true,
         'no_empty_statement' => true,
@@ -91,7 +96,9 @@ return PhpCsFixer\Config::create()
         'phpdoc_var_without_name' => true,
         'return_type_declaration' => ['space_before' => 'none'],
         'short_scalar_cast' => true,
+        'single_blank_line_before_namespace' => true,
         'single_quote' => true,
+        'single_trait_insert_per_statement' => true,
         'standardize_not_equals' => true,
         'ternary_operator_spaces' => true,
         'trailing_comma_in_multiline_array' => true,
