--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     ],
     "require": {
+        "php": ">= 7.0, < 7.5",
         "typo3/cms-core": "^8.7 || ^9.5 || ^10.4"
     },
     "require-dev": {
