--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 
 cache:
     directories:
-        - $HOME/.composer/cache
+        - $HOME/.config/composer/cache
         - $HOME/.sonar/cache
 
 jdk:
@@ -23,8 +23,9 @@ services:
 jobs:
     fast_finish: true
     allow_failures:
+        -   env: TYPO3=dev-master
         -   if: type != cron
-            env: TYPO3=dev-master
+            env: TYPO3=11.0.x-dev
         -   if: type != cron
             env: TYPO3=10.4.x-dev
     include:
@@ -33,7 +34,8 @@ jobs:
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
             install:
-                - composer require --no-progress --no-suggest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
+                - composer update
                 - git checkout composer.json
             before_script:
                 - mkdir -p .Build/public/typo3conf/ext/
@@ -94,7 +96,7 @@ jobs:
                     echo "Uploading release ${TRAVIS_TAG} to TER";
                     echo;
                     echo;
-                    $HOME/.composer/vendor/bin/ter-client upload filefill . -u "$TYPO3_ORG_USERNAME" -p "$TYPO3_ORG_PASSWORD" -m "$TAG_MESSAGE";
+                    $HOME/.config/composer/vendor/bin/ter-client upload filefill . -u "$TYPO3_ORG_USERNAME" -p "$TYPO3_ORG_PASSWORD" -m "$TAG_MESSAGE";
 
         -   stage: ✔ with sonarqube scanner
             if: type = push AND branch IN (master, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
@@ -119,7 +121,8 @@ jobs:
                             echo;
                             echo;
                             git clean -Xdf;
-                            composer require --dev --no-progress --no-suggest nimut/typo3-complete:"$TYPO3";
+                            composer require --dev --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3";
+                            composer update;
                             git checkout composer.json;
                             VERSION=${TYPO3//[!0-9]/};
 
@@ -147,7 +150,8 @@ jobs:
                         echo "Merging log and coverage files";
                         echo;
                         echo;
-                        composer require --no-progress --no-suggest --update-with-all-dependencies nimut/phpunit-merger;
+                        composer require --no-progress --no-suggest --no-update nimut/phpunit-merger;
+                        composer update;
                         .Build/bin/phpunit-merger coverage .Log/coverage/ .Log/coverage.xml;
                         .Build/bin/phpunit-merger log .Log/junit/ .Log/junit.xml;
                     fi
@@ -171,16 +175,25 @@ jobs:
             env: TYPO3=dev-master
         -   <<: *dev-tests
             php: 7.4
+            env: TYPO3=11.0.x-dev
+        -   <<: *dev-tests
+            php: 7.4
             env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.3
             env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 7.3
+            env: TYPO3=11.0.x-dev
         -   <<: *dev-tests
             php: 7.3
             env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.2
             env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 7.2
+            env: TYPO3=11.0.x-dev
         -   <<: *dev-tests
             php: 7.2
             env: TYPO3=10.4.x-dev
@@ -190,23 +203,41 @@ jobs:
             stage: 🏃 prefer-lowest tests
             if: type = cron
             install:
-                - composer require --no-progress --no-suggest --no-update typo3/cms-composer-installers:"^1.5 || ^2.0"
-                - composer require --no-progress --no-suggest --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer update
                 - git checkout composer.json
             php: 7.4
             env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 7.4
+            env: TYPO3=11.0.x-dev
+        -   <<: *lowest-tests
+            php: 7.4
+            env: TYPO3=^10.4
         -   <<: *lowest-tests
             php: 7.4
             env: TYPO3=10.4.x-dev
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=11.0.x-dev
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=^10.4
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=10.4.x-dev
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=11.0.x-dev
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=^10.4
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=10.4.x-dev
