--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4 || ~11.0.0"
+        "typo3/cms-core": "^10.4 || 11.5"
     },
     "require-dev": {
         "nimut/testing-framework": "5.x-dev"
