--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4 || ~11.0.0"
+        "typo3/cms-core": "^10.4 || ^11.5"
     },
     "require-dev": {
-        "nimut/testing-framework": "5.x-dev"
+        "nimut/testing-framework": "6.x-dev"
     },
     "autoload": {
         "psr-4": {
