--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     ],
     "require": {
+        "php": ">= 7.2, < 7.5 || >= 8.0, < 8.1",
         "typo3/cms-core": "^10.4 || ^11.5"
     },
     "require-dev": {
