[TASK] Change branch alias in composer.json

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.x-dev"
+            "dev-main": "4.x-dev"
         },
         "typo3/cms": {
             "extension-key": "filefill",
