--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ services:
 jobs:
     fast_finish: true
     allow_failures:
-        -   env: TYPO3=dev-master
+        -   env: TYPO3=dev-main
         -   if: type != cron
             env: TYPO3=11.5.x-dev
         -   if: type != cron
@@ -32,8 +32,6 @@ jobs:
         - &tests
             stage: 🏃 tests
             before_install:
-                - sudo sed 's/mozilla.DST_Root_CA_X3.crt/!mozilla\/DST_Root_CA_X3.crt/' -i /etc/ca-certificates.conf
-                - sudo update-ca-certificates
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
             install:
                 - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
@@ -114,14 +112,14 @@ jobs:
                     TYPO3_API_USERNAME="$TYPO3_ORG_USERNAME" TYPO3_API_PASSWORD="$TYPO3_ORG_PASSWORD" tailor ter:publish --comment "$TAG_MESSAGE" ${TRAVIS_TAG} filefill;
 
         -   stage: ✔ with sonarqube scanner
-            if: type = push AND branch IN (master, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
+            if: type = push AND branch IN (main, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
             git:
                 depth: false
             php: 7.4
             env: TYPO3="^10.4 ^11.5"
             before_install:
-                - sudo sed 's/mozilla.DST_Root_CA_X3.crt/!mozilla\/DST_Root_CA_X3.crt/' -i /etc/ca-certificates.conf
-                - sudo update-ca-certificates
+                - nvm install 12
+                - nvm use 12
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
@@ -185,26 +183,18 @@ jobs:
             <<: *tests
             stage: 🏃 dev tests
             before_install:
-                - sudo sed 's/mozilla.DST_Root_CA_X3.crt/!mozilla\/DST_Root_CA_X3.crt/' -i /etc/ca-certificates.conf
-                - sudo update-ca-certificates
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
                 - composer config minimum-stability dev
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
             php: 8.1.0
-            env: TYPO3=dev-master
+            env: TYPO3=dev-main
         -   <<: *dev-tests
             php: 8.1.0
             env: TYPO3=11.5.x-dev
         -   <<: *dev-tests
             php: 8.0
-            env: TYPO3=dev-master
-        -   <<: *dev-tests
-            php: 8.0
             env: TYPO3=11.5.x-dev
-        -   <<: *dev-tests
-            php: 7.4
-            env: TYPO3=dev-master
         -   <<: *dev-tests
             php: 7.4
             env: TYPO3=11.5.x-dev
@@ -227,7 +217,7 @@ jobs:
                 - composer update
                 - git checkout composer.json
             php: 8.1.0
-            env: TYPO3=dev-master
+            env: TYPO3=dev-main
         -   <<: *lowest-tests
             php: 8.1.0
             env: TYPO3=^11.5
@@ -236,16 +226,10 @@ jobs:
             env: TYPO3=11.5.x-dev
         -   <<: *lowest-tests
             php: 8.0
-            env: TYPO3=dev-master
-        -   <<: *lowest-tests
-            php: 8.0
             env: TYPO3=^11.5
         -   <<: *lowest-tests
             php: 8.0
             env: TYPO3=11.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=dev-master
         -   <<: *lowest-tests
             php: 7.4
             env: TYPO3=^11.5
