--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
             install:
-                - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update typo3/cms-core:"$TYPO3"
                 - composer update
                 - git checkout composer.json
             before_script:
@@ -52,7 +52,7 @@ jobs:
                         echo "Running unit tests";
                         echo;
                         echo;
-                        .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/UnitTestsBootstrap.php --testsuite unit;
+                        .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php --testsuite unit;
                     fi
 
                 - >
@@ -61,7 +61,7 @@ jobs:
                         echo "Running functional tests";
                         echo;
                         echo;
-                        find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTestsBootstrap.php {}';
+                        find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php {}';
                     fi
 
                 - >
@@ -137,7 +137,7 @@ jobs:
                             echo;
                             echo;
                             git clean -Xdf;
-                            composer require --dev --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3";
+                            composer require --dev --no-progress --no-suggest --no-update typo3/cms-core:"$TYPO3";
                             composer update;
                             git checkout composer.json;
                             VERSION=${TYPO3//[!0-9]/};
@@ -150,7 +150,7 @@ jobs:
                               echo "Running unit tests";
                               echo;
                               echo;
-                              .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/UnitTestsBootstrap.php --log-junit .Log/junit/unit_$VERSION.xml --coverage-php .Log/coverage/unit_$VERSION.cov  --testsuite unit;
+                              .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php --log-junit .Log/junit/unit_$VERSION.xml --coverage-php .Log/coverage/unit_$VERSION.cov  --testsuite unit;
                             fi
 
                             if [ -d "Tests/Functional" ]; then
@@ -158,7 +158,7 @@ jobs:
                               echo "Running functional tests";
                               echo;
                               echo;
-                              .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$VERSION.xml --coverage-php .Log/coverage/functional_$VERSION.cov --testsuite functional;
+                              .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$VERSION.xml --coverage-php .Log/coverage/functional_$VERSION.cov --testsuite functional;
                             fi
                         done
 
@@ -213,7 +213,7 @@ jobs:
             stage: 🏃 prefer-lowest tests
             if: type = cron
             install:
-                - composer require --no-progress --no-suggest --no-update --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update --prefer-lowest typo3/cms-core:"$TYPO3"
                 - composer update
                 - git checkout composer.json
             php: 8.1.0
