Add console commands to Services.yaml file
Needed for TYPO3 v11 to execute commands

Closes #62

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -16,3 +16,13 @@ services:
             -   name: event.listener
                 identifier: 'filefillFileProcessingEventEventListener'
                 event: TYPO3\CMS\Core\Resource\Event\BeforeFileProcessingEvent
+                
+    IchHabRecht\Filefill\Command\DeleteCommand:
+        tags:
+            - name: 'console.command'
+              command: 'filefill:delete'
+
+    IchHabRecht\Filefill\Command\ResetCommand:
+        tags:
+            - name: 'console.command'
+              command: 'filefill:reset'
