--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,12 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 8.1.0
+            env: TYPO3=~12.1.0
+        -   <<: *tests
+            php: 8.1.0
+            env: TYPO3=~12.0.0
+        -   <<: *tests
+            php: 8.1.0
             env: TYPO3=^11.5
         -   <<: *tests
             php: 8.0
@@ -80,12 +86,6 @@ jobs:
             env: TYPO3=^11.5
         -   <<: *tests
             php: 7.4
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.2
             env: TYPO3=^10.4
 
         -   stage: 🚢 to ter
@@ -115,8 +115,8 @@ jobs:
             if: type = push AND branch IN (main, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
             git:
                 depth: false
-            php: 7.4
-            env: TYPO3="^10.4 ^11.5"
+            php: 8.1
+            env: TYPO3="^11.5 ~12.0.0 ~12.1.0"
             before_install:
                 - nvm install 12
                 - nvm use 12
@@ -201,12 +201,6 @@ jobs:
         -   <<: *dev-tests
             php: 7.4
             env: TYPO3=10.4.x-dev
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=10.4.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=10.4.x-dev
 
         - &lowest-tests
             <<: *dev-tests
@@ -220,6 +214,9 @@ jobs:
             env: TYPO3=dev-main
         -   <<: *lowest-tests
             php: 8.1.0
+            env: TYPO3=^12.0
+        -   <<: *lowest-tests
+            php: 8.1.0
             env: TYPO3=^11.5
         -   <<: *lowest-tests
             php: 8.1.0
@@ -241,16 +238,4 @@ jobs:
             env: TYPO3=^10.4
         -   <<: *lowest-tests
             php: 7.4
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^10.4
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^10.4
-        -   <<: *lowest-tests
-            php: 7.2
             env: TYPO3=10.4.x-dev
