--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^10.4.11 || ^11.5"
+        "php": "^7.4 || ^8.0",
+        "typo3/cms-core": "^10.4.11 || ^11.5 || ~12.0.0 || ~12.1.0"
     },
     "require-dev": {
-        "typo3/testing-framework": "^6.16"
+        "typo3/testing-framework": "^6.16 || 7.*@dev",
+        "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
@@ -43,7 +44,8 @@
         "bin-dir": ".Build/bin",
         "allow-plugins": {
             "typo3/class-alias-loader": true,
-            "typo3/cms-composer-installers": true
+            "typo3/cms-composer-installers": true,
+            "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": true
         }
     },
     "extra": {
@@ -52,7 +54,6 @@
         },
         "typo3/cms": {
             "extension-key": "filefill",
-            "cms-package-dir": "{$vendor-dir}/typo3/cms",
             "app-dir": ".Build",
             "web-dir": ".Build/public"
         }
