[FEATURE] Declare support for TYPO3 v12.2

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4.11 || ^11.5 || ~12.0.0 || ~12.1.0"
+        "typo3/cms-core": "^10.4.11 || ^11.5 || ~12.0.0 || ~12.1.0 || ~12.2.0"
     },
     "require-dev": {
         "typo3/testing-framework": "^6.16 || 7.*@dev",
