--- a/.travis.yml
+++ b/.travis.yml
@@ -70,14 +70,26 @@ jobs:
                     echo;
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
+            php: 8.2.0
+            env: TYPO3=~12.2.0
+        -   <<: *tests
             php: 8.1.0
             env: TYPO3=~12.2.0
+        -   <<: *tests
+            php: 8.2.0
+            env: TYPO3=~12.1.0
         -   <<: *tests
             php: 8.1.0
             env: TYPO3=~12.1.0
         -   <<: *tests
+            php: 8.2.0
+            env: TYPO3=~12.0.0
+        -   <<: *tests
             php: 8.1.0
             env: TYPO3=~12.0.0
+        -   <<: *tests
+            php: 8.2.0
+            env: TYPO3=^11.5
         -   <<: *tests
             php: 8.1.0
             env: TYPO3=^11.5
@@ -190,8 +202,14 @@ jobs:
                 - composer config minimum-stability dev
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
+            php: 8.2.0
+            env: TYPO3=dev-main
+        -   <<: *dev-tests
             php: 8.1.0
             env: TYPO3=dev-main
+        -   <<: *dev-tests
+            php: 8.2.0
+            env: TYPO3=11.5.x-dev
         -   <<: *dev-tests
             php: 8.1.0
             env: TYPO3=11.5.x-dev
