--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -16,7 +16,13 @@ services:
             -   name: event.listener
                 identifier: 'filefillFileProcessingEventEventListener'
                 event: TYPO3\CMS\Core\Resource\Event\BeforeFileProcessingEvent
-                
+
+    IchHabRecht\Filefill\EventListener\ModifyFlexFormDataStructureEventListener:
+        tags:
+            -   name: event.listener
+                identifier: 'filefillModifyFlexFormDataStructureEventListener'
+                event: TYPO3\CMS\Core\Configuration\Event\AfterFlexFormDataStructureParsedEvent
+
     IchHabRecht\Filefill\Command\DeleteCommand:
         tags:
             - name: 'console.command'
