--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,12 @@ jobs:
                     echo;
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
+            php: 8.2.0
+            env: TYPO3=~12.2.0
+        -   <<: *tests
+            php: 8.2.0
+            env: TYPO3=~12.2.0
+        -   <<: *tests
             php: 8.1.0
             env: TYPO3=~12.1.0
         -   <<: *tests
