--- a/.travis.yml
+++ b/.travis.yml
@@ -71,16 +71,7 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 8.1.0
-            env: TYPO3=~12.3.0
-        -   <<: *tests
-            php: 8.1.0
-            env: TYPO3=~12.2.0
-        -   <<: *tests
-            php: 8.1.0
-            env: TYPO3=~12.1.0
-        -   <<: *tests
-            php: 8.1.0
-            env: TYPO3=~12.0.0
+            env: TYPO3=^12.4
         -   <<: *tests
             php: 8.1.0
             env: TYPO3=^11.5
@@ -122,7 +113,7 @@ jobs:
             git:
                 depth: false
             php: 8.1
-            env: TYPO3="^11.5 ~12.0.0 ~12.1.0 ~12.2.0 ~12.3.0"
+            env: TYPO3="^11.5 ^12.4"
             before_install:
                 - nvm install 12
                 - nvm use 12
