--- a/.travis.yml
+++ b/.travis.yml
@@ -214,7 +214,10 @@ jobs:
             env: TYPO3=dev-main
         -   <<: *lowest-tests
             php: 8.1.0
-            env: TYPO3=^12.0
+            env: TYPO3=^12.4
+        -   <<: *lowest-tests
+            php: 8.1.0
+            env: TYPO3=12.4.x-dev
         -   <<: *lowest-tests
             php: 8.1.0
             env: TYPO3=^11.5
