--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "typo3/cms-core": "^10.4.11 || ^11.5 || ~12.0.0 || ~12.1.0"
     },
     "require-dev": {
-        "typo3/testing-framework": "^6.16 || 7.*@dev",
-        "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0"
+        "typo3/testing-framework": "^6.16 || 7.*@dev"
     },
     "autoload": {
         "psr-4": {
@@ -44,8 +43,7 @@
         "bin-dir": ".Build/bin",
         "allow-plugins": {
             "typo3/class-alias-loader": true,
-            "typo3/cms-composer-installers": true,
-            "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": true
+            "typo3/cms-composer-installers": true
         }
     },
     "extra": {
