[TASK] Raise compatibility to TYPO3 12.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ jobs:
     allow_failures:
         -   env: TYPO3=dev-main
         -   if: type != cron
+            env: TYPO3=12.4.x-dev
+        -   if: type != cron
             env: TYPO3=11.5.x-dev
         -   if: type != cron
             env: TYPO3=10.4.x-dev
@@ -71,10 +73,7 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 8.1.0
-            env: TYPO3=~12.1.0
-        -   <<: *tests
-            php: 8.1.0
-            env: TYPO3=~12.0.0
+            env: TYPO3=^12.4
         -   <<: *tests
             php: 8.1.0
             env: TYPO3=^11.5
@@ -116,7 +115,7 @@ jobs:
             git:
                 depth: false
             php: 8.1
-            env: TYPO3="^11.5 ~12.0.0 ~12.1.0"
+            env: TYPO3="^11.5 ^12.4"
             before_install:
                 - nvm install 12
                 - nvm use 12
@@ -191,6 +190,9 @@ jobs:
             env: TYPO3=dev-main
         -   <<: *dev-tests
             php: 8.1.0
+            env: TYPO3=12.4.x-dev
+        -   <<: *dev-tests
+            php: 8.1.0
             env: TYPO3=11.5.x-dev
         -   <<: *dev-tests
             php: 8.0
@@ -215,6 +217,9 @@ jobs:
         -   <<: *lowest-tests
             php: 8.1.0
             env: TYPO3=^12.0
+        -   <<: *lowest-tests
+            php: 8.1.0
+            env: TYPO3=12.4.x-dev
         -   <<: *lowest-tests
             php: 8.1.0
             env: TYPO3=^11.5
