--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4.11 || ^11.5 || ~12.0.0 || ~12.1.0"
+        "typo3/cms-core": "^10.4.11 || ^11.5 || ^12.4"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.6",
         "typo3/testing-framework": "^6.16 || ^7.0.2"
     },
     "autoload": {
