[TASK] Migrate to GitHub Actions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=filefill
+sonar.organization=ichhabrecht-github
 sonar.projectName=ichhabrecht/filefill
 sonar.projectVersion=4.x
 sonar.sources=.
