--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,10 @@
         "typo3/cms-core": "^13.1"
     },
     "require-dev": {
+        "doctrine/dbal": "^2.11 || ^3.6.2",
         "phpunit/phpunit": "^9.6",
-        "typo3/testing-framework": "^6.16 || ^7.0.2"
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "typo3/testing-framework": "^6.16.3 || ^7.0.4"
     },
     "autoload": {
         "psr-4": {
