--- a/.github/workflows/compute.yml
+++ b/.github/workflows/compute.yml
@@ -7,6 +7,8 @@ env:
         "7.4"
         "8.0"
         "8.1"
+        "8.2"
+        "8.3"
     TYPO3: |
         "^10.4"
         "^11.5"
@@ -25,6 +27,14 @@ env:
                 "typo3": "^10.4",
                 "php": "8.1",
             },
+            "10.4-8.2": {
+                "typo3": "^10.4",
+                "php": "8.2",
+            },
+            "10.4-8.3": {
+                "typo3": "^10.4",
+                "php": "8.3",
+            },
             "10.4.x-dev-8.0": {
                 "typo3": "10.4.x-dev",
                 "php": "8.0",
@@ -32,6 +42,14 @@ env:
             "10.4.x-dev-8.1": {
                 "typo3": "10.4.x-dev",
                 "php": "8.1",
+            },
+            "10.4.x-dev-8.2": {
+                "typo3": "10.4.x-dev",
+                "php": "8.2",
+            },
+            "10.4.x-dev-8.3": {
+                "typo3": "10.4.x-dev",
+                "php": "8.3",
             },
             "12.4-7.4": {
                 "typo3": "^12.4",
