--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,13 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4.11 || ^11.5 || ^12.4"
+        "php": "^8.1",
+        "typo3/cms-core": "^11.5 || ^12.4 || ^13.4"
     },
     "require-dev": {
-        "doctrine/dbal": "^2.11 || ^3.6.2",
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^10.5",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "typo3/testing-framework": "^6.16.3 || ^7.0.4"
+        "typo3/testing-framework": "^7.0.4 || ^8.2.1"
     },
     "autoload": {
         "psr-4": {
