[TASK] Update author information

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "Nicole Cordes",
-            "email": "typo3@cordes.co",
+            "name": "Nicole Hummel",
+            "email": "nicole-typo3@nimut.dev",
             "role": "Developer"
         }
     ],
