--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "typo3/cms-core": "^11.5 || ^12.4 || ^13.4"
+        "php": "^8.2",
+        "typo3/cms-core": "^13.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5",
+        "phpunit/phpunit": "^10.5 || ^11.3",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "typo3/testing-framework": "^7.0.4 || ^8.2.1"
+        "typo3/testing-framework": "^8.2.3 || ^9.1.2"
     },
     "autoload": {
         "psr-4": {
