--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,25 +12,28 @@
     backupStaticProperties="false"
     requireCoverageMetadata="false"
 >
-  <coverage ignoreDeprecatedCodeUnits="true">
-    <report>
-      <php outputFile=".Log/coverage/coverage.cov"/>
-    </report>
-  </coverage>
-  <logging>
-    <junit outputFile=".Log/junit/junit.xml"/>
-  </logging>
-  <testsuites>
-    <testsuite name="unit">
-      <directory suffix="Test.php">Tests/Unit</directory>
-    </testsuite>
-    <testsuite name="functional">
-      <directory suffix="Test.php">Tests/Functional</directory>
-    </testsuite>
-  </testsuites>
-  <source>
-    <include>
-      <directory suffix=".php">Classes</directory>
-    </include>
-  </source>
+    <coverage ignoreDeprecatedCodeUnits="true">
+        <report>
+            <php outputFile=".Log/coverage/coverage.cov"/>
+        </report>
+    </coverage>
+    <extensions>
+        <bootstrap class="DG\BypassFinals\PHPUnitExtension"/>
+    </extensions>
+    <logging>
+        <junit outputFile=".Log/junit/junit.xml"/>
+    </logging>
+    <testsuites>
+        <testsuite name="unit">
+            <directory suffix="Test.php">Tests/Unit</directory>
+        </testsuite>
+        <testsuite name="functional">
+            <directory suffix="Test.php">Tests/Functional</directory>
+        </testsuite>
+    </testsuites>
+    <source>
+        <include>
+            <directory suffix=".php">Classes</directory>
+        </include>
+    </source>
 </phpunit>
